apps/mail/deployment-default-dovecot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dovecot
    environment: prod
  name: dovecot
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dovecot
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
        reloader.stakater.com/rollout-strategy: restart
      labels:
        app: dovecot
        environment: prod
    spec:
      automountServiceAccountToken: true
      containers:
      - image: dovecot/dovecot
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 143
          timeoutSeconds: 5
        name: dovecot
        ports:
        - containerPort: 143
          hostPort: 143
          name: imap
          protocol: TCP
        - containerPort: 993
          hostPort: 993
          name: imaps
          protocol: TCP
        - containerPort: 110
          hostPort: 110
          name: pop3
          protocol: TCP
        - containerPort: 995
          hostPort: 995
          name: pop3s
          protocol: TCP
        - containerPort: 4190
          hostPort: 4190
          name: sieve
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 143
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/dovecot/dovecot.conf
          mountPropagation: None
          name: dovecot-main
          readOnly: true
          subPath: dovecot.conf
        - mountPath: /etc/dovecot/auth-ldap.conf.ext
          mountPropagation: None
          name: dovecot-main
          readOnly: true
          subPath: auth-ldap.conf.ext
        - mountPath: /etc/dovecot/dovecot-ldap.conf.ext
          mountPropagation: None
          name: ldap-conf
          readOnly: true
          subPath: dovecot-ldap.conf.ext
        - mountPath: /etc/dovecot/dovecot-ldap-passdb.conf.ext
          mountPropagation: None
          name: ldap-conf
          readOnly: true
          subPath: dovecot-ldap-passdb.conf.ext
        - mountPath: /etc/ssl/mail
          mountPropagation: None
          name: tls
          readOnly: true
        - mountPath: /var/mail
          mountPropagation: HostToContainer
          name: mailboxes
        - mountPath: /var/indexes
          mountPropagation: None
          name: indexes
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/hostname: hestia
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: dovecot-main
          optional: false
        name: dovecot-main
      - configMap:
          defaultMode: 420
          items:
          - key: dovecot-ldap.conf.ext.tmpl
            path: dovecot-ldap.conf.ext.tmpl
          - key: dovecot-ldap-passdb.conf.ext.tmpl
            path: dovecot-ldap-passdb.conf.ext.tmpl
          name: dovecot-ldap
          optional: false
        name: dovecot-ldap
      - emptyDir: {}
        name: ldap-conf
      - name: tls
        secret:
          defaultMode: 420
          optional: false
          secretName: wildcard-brmartin-tls
      - name: mailboxes
        persistentVolumeClaim:
          claimName: dovecot-mailboxes-sw
      - emptyDir: {}
        name: indexes
