apps/mail/deployment-default-rspamd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rspamd
    environment: prod
  name: rspamd
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rspamd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
        reloader.stakater.com/rollout-strategy: restart
      labels:
        app: rspamd
        environment: prod
    spec:
      automountServiceAccountToken: true
      containers:
      - image: rspamd/rspamd
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 11334
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: rspamd
        ports:
        - containerPort: 11332
          name: milter
          protocol: TCP
        - containerPort: 11334
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 11334
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 768Mi
          requests:
            cpu: 25m
            memory: 640Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/rspamd/dkim
          mountPropagation: None
          name: dkim-keys
          readOnly: true
        - mountPath: /etc/rspamd/local.d/worker-proxy.inc
          mountPropagation: None
          name: config
          readOnly: true
          subPath: worker-proxy.inc
        - mountPath: /etc/rspamd/local.d/redis.conf
          mountPropagation: None
          name: config
          readOnly: true
          subPath: redis.conf
        - mountPath: /etc/rspamd/local.d/dkim_signing.conf
          mountPropagation: None
          name: config
          readOnly: true
          subPath: dkim_signing.conf
        - mountPath: /etc/rspamd/local.d/worker-controller.inc
          mountPropagation: None
          name: rspamd-controller
          readOnly: true
          subPath: worker-controller.inc
        - mountPath: /var/lib/rspamd
          mountPropagation: HostToContainer
          name: data
      - env:
        - name: RSPAMD_CONTROLLER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: controller-password
              name: rspamd-controller
              optional: false
        - name: NGINX_ENVSUBST_TEMPLATE_DIR
          value: /etc/nginx/conf.d
        - name: NGINX_ENVSUBST_TEMPLATE_SUFFIX
          value: .template
        - name: NGINX_ENVSUBST_OUTPUT_DIR
          value: /etc/nginx/conf.d
        - name: NGINX_ENVSUBST_FILTER
          value: RSPAMD_CONTROLLER_PASSWORD
        image: nginx
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 11335
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: metrics-proxy
        ports:
        - containerPort: 11335
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 11335
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 16Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/rspamd-metrics.conf.template
          mountPropagation: None
          name: config
          readOnly: true
          subPath: metrics-proxy.conf.template
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: dkim-keys
        secret:
          defaultMode: 420
          optional: false
          secretName: dkim-keys
      - configMap:
          defaultMode: 420
          name: rspamd-config
          optional: false
        name: config
      - name: rspamd-controller
        secret:
          defaultMode: 420
          optional: false
          secretName: rspamd-controller
      - name: data
        persistentVolumeClaim:
          claimName: rspamd-data-sw
