apps/mail/deployment-default-sogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sogo
    environment: prod
  name: sogo
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sogo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
        reloader.stakater.com/rollout-strategy: restart
      labels:
        app: sogo
        environment: prod
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DISABLE_CRON
          value: '1'
        image: salvoxia/sogo
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /SOGo
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: sogo
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /SOGo
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /srv/etc
          mountPropagation: None
          name: srv-etc
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: srv-etc
      - configMap:
          defaultMode: 420
          items:
          - key: sogo.conf.tmpl
            path: sogo.conf.tmpl
          name: sogo-config
          optional: false
        name: sogo-tmpl
