apps/mail/service-default-mail-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mail-redis
    environment: prod
  name: mail-redis
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: mail-redis
  sessionAffinity: None
  type: ClusterIP
