apps/mail/service-default-postfix.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postfix
    environment: prod
  name: postfix
  namespace: default
spec:
  externalIPs:
  - 192.168.1.5
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - name: smtp
    port: 25
    protocol: TCP
    targetPort: 25
  - name: smtps
    port: 465
    protocol: TCP
    targetPort: 465
  - name: submission
    port: 587
    protocol: TCP
    targetPort: 587
  selector:
    app: postfix
  sessionAffinity: None
  type: ClusterIP
