apps/mail/ciliumnetworkpolicy-default-postfix.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postfix
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        app: rspamd
    toPorts:
    - ports:
      - port: '11332'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: dovecot
    toPorts:
    - ports:
      - port: '24'
        protocol: TCP
    - ports:
      - port: '12345'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: lldap
    toPorts:
    - ports:
      - port: '3890'
        protocol: TCP
  - toCIDR:
    - 0.0.0.0/0
    toPorts:
    - ports:
      - port: '25'
        protocol: TCP
      - port: '587'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
  endpointSelector:
    matchLabels:
      app: postfix
