apps/mail/ciliumnetworkpolicy-default-sogo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sogo
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        app: lldap
    toPorts:
    - ports:
      - port: '3890'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: dovecot
    toPorts:
    - ports:
      - port: '143'
        protocol: TCP
      - port: '993'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app: postfix
    toPorts:
    - ports:
      - port: '587'
        protocol: TCP
  - toCIDR:
    - 192.168.1.10/32
    toPorts:
    - ports:
      - port: '5433'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
  endpointSelector:
    matchLabels:
      app: sogo
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: traefik
        k8s:io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
